# ggml

examples/: CMakeLists.txt
examples/dolly-v2/: CMakeLists.txt  main.cpp
examples/gpt-2/: CMakeLists.txt
examples/gpt-j/: CMakeLists.txt
examples/mnist/: CMakeLists.txt  main.cpp
examples/redpajama/: CMakeLists.txt  main.cpp
examples/stablelm/: CMakeLists.txt  main.cpp
examples/whisper/: CMakeLists.txt
src/: CMakeLists.txt  ggml.c
